Ask CFPB spacing fixes

--- a/cfgov/unprocessed/css/pages/ask.less
+++ b/cfgov/unprocessed/css/pages/ask.less
@@ -136,6 +136,8 @@
         }
 
         .respond-to-max(@bp-xs-max, {
+            padding-bottom: unit( @grid_gutter-width / @base-font-size-px, em );
+
             .o-search-bar_col + .o-search-bar_col {
                 margin-top: unit( ( @grid_gutter-width / 2 ) / @base-font-size-px, em );
             }
@@ -279,10 +281,6 @@
 
 .ask-cfpb-page__search {
     .o-search-bar {
-        .respond-to-max( @bp-xs-max, {
-            padding-bottom: unit( @grid_gutter-width / @base-font-size-px, em );
-        } );
-
         form {
             max-width: @bp-xs-max;
         }
@@ -307,6 +305,12 @@
         color: @green;
     }
 
+    .ask-categories {
+        .respond-to-max(@bp-sm-max, {
+            padding-bottom: unit( @grid_gutter-width / @base-font-size-px, em );
+        });
+    }
+
     .subcategory-nav {
         .list_item {
             .webfont-medium();
@@ -324,6 +328,13 @@
         .content-l_col {
             margin-bottom: 0;
         }
+
+    }
+
+    .question_list {
+        .respond-to-max(@bp-sm-max, {
+            margin-top: unit( @grid_gutter-width / @base-font-size-px, em ) 0;
+        });
 
     }
 }
